@@ -1,0 +1,33 @@
+/**
+ * Copyright (C) 2018 Infinite Automation Software. All rights reserved.
+ */
+package com.serotonin.m2m2.web.mvc.spring.security;
+
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+import org.springframework.context.event.EventListener;
+import org.springframework.security.web.authentication.switchuser.AuthenticationSwitchUserEvent;
+import org.springframework.stereotype.Component;
+
+import com.serotonin.m2m2.vo.User;
+
+/**
+ * Class to handle all security related events.  Currently just logs them.
+ *
+ * @author Terry Packer
+ */
+@Component
+public class MangoSecurityEventListener {
+
+    private static final Log LOG = LogFactory.getLog(MangoSecurityEventListener.class);
+    
+    /**
+     * Listen for events generated by the MangoSwitchUserFilter
+     * @param event
+     */
+    @EventListener
+    public void handleAuthenticationSwitchUserEvent(AuthenticationSwitchUserEvent event) {
+        LOG.info("Switch User: '" + ((User)event.getAuthentication().getPrincipal()).getUsername() + "' switched to '" + event.getTargetUser().getUsername() + "'");
+    }
+    
+}
